[package]
name = "sets_multisets"
description = "Simple API for working with sets and multisets of elements of type usize"
version = "0.2.1"
authors = ["Jelle Vos <J.V.Vos@tudelft.nl>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/jellevos/sets_multisets"
repository = "https://github.com/jellevos/sets_multisets"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
bytevec = "0.2"
fasthash = "0.4"
