[package]
name = "sets_multisets"
description = "Simple API for working with sets and multisets of elements of type usize"
version = "0.8.0"
authors = ["Jelle Vos <J.V.Vos@tudelft.nl>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/jellevos/sets_multisets"
repository = "https://github.com/jellevos/sets_multisets"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
bytevec = "0.2"
xxh3 = { version = "0.1", optional = true }
sha3 = { version = "0.10", optional = true }
blake3 = { version = "1.3", optional = true }

[features]
default = ["xxh3"]
xxh3 = ["dep:xxh3"]
shake128 = ["dep:sha3"]
blake3 = ["dep:blake3"]
