[package]
name = "sets_multisets"
description = "Simple API for working with sets and multisets of elements of type usize"
version = "0.10.0"
authors = ["Jelle Vos <J.V.Vos@tudelft.nl>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/jellevos/sets_multisets"
repository = "https://github.com/jellevos/sets_multisets"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
bytevec = "0.2"
xxh3 = { version = "0.1" }
sha3 = { version = "0.10" }
blake3 = { version = "1.3" }
argon2 = { version = "0.5" }
